<resources>
    <string name="app_name">CalMe</string>
    <string name="settingsButton">Settings</string>
    <string name="startDescription">Start</string>
    <string name="TutorialButton">Tutorial</string>

    <string name="FeelingQuestion">How do you feel?</string>
    <string name="FeelingConfirmation">Are you feeling</string>
    <string name="sad">Sad</string>
    <string name="calm">Calm</string>
    <string name="mad">Mad</string>
    <string name="scared">Scared</string>
    <string name="frustrated">Frustrated</string>
    <string name="anxious">Anxious</string>

    <string name="CalmDown">Let\'s calm down with…</string>
    <string name="BalloonBreathing">Balloon Breathing</string>
    <string name="FidgetToy">A Fidget Toy</string>
    <string name="Counting">Counting to 10</string>
    <string name="DrainBreathing">Drain Breathing</string>
    <string name="BookReading">Reading a Book</string>
    <string name="Drawing">Drawing</string>
    <string name="Yoga">Yoga</string>

    <string name="nameSave">Save</string>
    <string name="saved">Saved to your phone! Check your "Pictures" folder.</string>
    <string name="notSaved">Drawing could not be saved for some unknown reason, sorry!</string>
    <string name="trySaveAgain">If you just gave us permission, you may need to click again to save.</string>
    <string name="nameUndo">Undo</string>
    <string name="nameRedo">Redo</string>
    <string name="nameClear">Clear All</string>
    <string name="nameBlack">Black</string>
    <string name="nameGray">Gray</string>
    <string name="nameWhite">White</string>
    <string name="nameRed">Red</string>
    <string name="nameOrange">Orange</string>
    <string name="nameYellow">Yellow</string>
    <string name="nameGreen">Green</string>
    <string name="nameSkyBlue">Sky Blue</string>
    <string name="nameDeepBlue">Deep Blue</string>
    <string name="nameViolet">Violet</string>
    <string name="namePink">Pink</string>
    <string name="nameBrown">Brown</string>

    <string name="nameBackgroundColor">Background Color</string>
    <string name="explanationPenBGSwitch">Background Color and Pencil Color Switch</string>
    <string name="namePenColor">Pencil Color</string>

    <string name="lblCounting">Let\'s Count Together</string>
    <string name="zero">Ready? Go</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>

    <string name="done">Done</string>
    <string name="again">Again</string>
    <string name="go_back">Go Back</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="lblBreathWithMe">Breath With Me!</string>
    <string name="Ready">Ready?</string>
    <string name="In">In…</string>
    <string name="Hold">Hold…</string>
    <string name="Out">Out…</string>
    <string name="GoodJob">Good Job</string>

    <string name="lblFindToy">Go Find A Toy!</string>
    <string name="lblFindBook">Go Find A Book!</string>

    <string name="lblFollowPose">Do as I do!</string>

    <string name="swipe">Swipe the screen to make it spin!</string>
    <string name="spinner">Fidget Spinner</string>

    <string name="wordDrawing">Drawing</string>
</resources>
