<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Paint">

    <LinearLayout
        android:layout_width="69dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBlack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:contentDescription="@string/nameBlack" />

        <Button
            android:id="@+id/btnGray"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintGray"
            android:contentDescription="@string/nameGray" />

        <Button
            android:id="@+id/btnWhite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:contentDescription="@string/nameWhite" />

        <Button
            android:id="@+id/btnRed"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintRed"
            android:contentDescription="@string/nameRed" />

        <Button
            android:id="@+id/btnOrange"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintOrange"
            android:contentDescription="@string/nameOrange" />

        <Button
            android:id="@+id/btnYellow"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintYellow"
            android:contentDescription="@string/nameYellow" />

        <Button
            android:id="@+id/btnGreen"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintGreen"
            android:contentDescription="@string/nameGreen" />

        <Button
            android:id="@+id/btnBlue"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintCyan"
            android:contentDescription="@string/nameSkyBlue" />

        <Button
            android:id="@+id/btnIndigo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintBlue"
            android:contentDescription="@string/nameDeepBlue" />

        <Button
            android:id="@+id/btnViolet"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintPurple"
            android:contentDescription="@string/nameViolet" />

        <Button
            android:id="@+id/btnPink"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintPink"
            android:contentDescription="@string/namePink" />

        <Button
            android:id="@+id/btnBrown"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/PaintBrown"
            android:contentDescription="@string/nameBrown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.android.graphics.CanvasView
            android:id="@+id/canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".11"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.21"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btnBack-Pen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".725"
                android:checked="false"
                android:contentDescription="@string/explanationPenBGSwitch"
                android:fontFamily="casual"
                android:textOff="@string/namePenColor"
                android:textOn="@string/nameBackgroundColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_save"
                android:contentDescription="@string/nameSave" />

            <Button
                android:id="@+id/btnUndo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_revert"
                android:contentDescription="@string/nameUndo" />

            <Button
                android:id="@+id/btnRedo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_revert"
                android:contentDescription="@string/nameRedo"
                android:scaleX="-1" />

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/ic_menu_delete"
                android:contentDescription="@string/nameClear" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>